# MonoAge-Depression-Detector

./: CMakeLists.txt  README.md  architecture.json
src/: CLIHandler.cpp  CLIHandler.h  DepressionModel.cpp  DepressionModel.h  MonoAgeAnalyzer.cpp  MonoAgeAnalyzer.h  main.cpp
